--- a/res/xml/filepaths.xml
+++ b/res/xml/filepaths.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <cache-path name="files" path="files/"/>
+    <cache-path name="files" path=""/>
 </paths>
